# AE_Projekt

./: CMakeLists.txt  README.md  graph_code.py  main.cpp
Graph_Code/: CMakeLists.txt  Hinweis.txt  graph_code.py  main_graph.cpp  same_stats_graph
Video_Code/: CMakeLists.txt  Hinweis.txt  main_video.cpp  same_stats_video  video_code.py
paper/: notes.md
paper/latex/: paper.tex
paper/vorlage_original/: paper.tex
